    - support for associative arrays in expressions
    - fixed problem with loading debug info of large projects
  * property: fixed editing multiple configurations at once
  * added Compile command to syntax check the current source file
  * parser now supports new delegate syntax (x) => x
  * project config: shown command line now updated when pressing "Apply"
  * fix resource include with spaces
  * fix always rebuilding if a dependent library project target has spaces in the path name

2012-05-01 Version 0.3.32

  * new version of cv2pdb with better handling of unicode characters in path names and better
    support for local variables in DWARF debug info
  * new version of mago with string literal support for associative array keys and easier stepping into main
  * some changes to reduce memory leaks due to false pointers
  * fixed parser to disambiguate MixinStatement and MixinExpression
  * added support for __vector(T) to parser
  * goto definition: if executed on an import statement, now searching file through import paths
  * fixed lexer to not treat !in_x as an operator followed by an identifier "_x"
  * fixed regression: import expansions only listed folders, no modules
  * fixed custom command: project would not restore if multiple commands are used
  * project properties: added output type DLL for easier switching between DMD and GDC
  * project properties: added subsystem option, use "not set" if you have to specify a specific windows version
  * fixed underlining syntax errors shows only first error
  * fixed option "Show expansions when" not saving state "writing an identifier"
  * added icon for disabled project item (tool set to "None")
  * version highlighting now supports versions DigitalMars/GNU and Win32/Win64
  * fixed building static lib with GDC and a name in the library file name

unreleased Version 0.3.33

  * debugger project settings now stored in solution options file, not in project file