@@ -93,7 +93,7 @@ BMP_SPLASHSCRN  BITMAP "resources/dsplashscreenicon.bmp"
 #define VER_FILEVERSION_STR     _str(VERSION_MAJOR.VERSION_MINOR.VERSION_REVISION)
 #define VER_PRODUCTVERSION      VER_FILEVERSION
 #define VER_PRODUCTVERSION_STR  VER_FILEVERSION_STR
-#define VER_LEGALCOPYRIGHT_STR  "(c) 2010-2011 Rainer Schuetze"
+#define VER_LEGALCOPYRIGHT_STR  "(c) 2010-2012 Rainer Schuetze"
 
 #define VER_FILEDESCRIPTION_STR  "Visual D Package\0"
 #define VER_PRODUCTNAME_STR      "Visual D\0"
